# reussir-lang

./: .gitignore  404.html  Cargo.toml  index.html  index.xml  sitemap.xml
.github/workflows/: build-doc.yaml  build.yaml
categories/: index.html
dialect/: index.html
dialect/code_docs/: index.html  index.xml
dialect/code_docs/ReussirCompositeLayoutInterface/: index.html
dialect/code_docs/ReussirDialect/: index.html
dialect/code_docs/ReussirMangleInterface/: index.html
dialect/code_docs/ReussirOps/: index.html
dialect/code_docs/ReussirPasses/: index.html
dialect/code_docs/ReussirTypes/: index.html
frontend/: index.html
reussir-core/: Cargo.toml
reussir-core/src/: ctx.rs  elab.rs  eval.rs  lib.rs  meta.rs  surf.rs  term.rs  utils.rs  value.rs
reussir-lang/: Cargo.toml
reussir-lang-legacy/: Cargo.toml
reussir-lang-legacy/src/: lib.rs
reussir-lang-legacy/src/syntax/: mod.rs  surface.rs
reussir-lang-legacy/src/syntax/concrete/: scope.rs  type.rs
reussir-lang/src/: lib.rs
reussir-lang/src/sema/: elab.rs  eval.rs  mod.rs  norm.rs  term.rs  type.rs  unify.rs  value.rs
reussir-lang/src/syntax/: expr.rs  lexer.rs  mod.rs  stmt.rs  type.rs
reussir-lang/src/syntax/abstract/: inline.rs  mod.rs  rename.rs
reussir-lang/src/syntax/concrete/: mod.rs  scope.rs
reussir-mlir/: CMakeLists.txt  Cargo.toml  README  build.rs
reussir-mlir/include/: CMakeLists.txt
reussir-mlir/include/Reussir/: CAPI.h  CMakeLists.txt  Common.h  Passes.h  Passes.td
reussir-mlir/include/Reussir/Analysis/: AliasAnalysis.h  ReuseAnalysis.h
reussir-mlir/include/Reussir/Bridge/: AST.h
reussir-mlir/include/Reussir/IR/: CMakeLists.txt  ReussirAttrs.td  ReussirDialect.h  ReussirDialect.td  ReussirOps.h  ReussirOps.td  ReussirOpsEnums.h  ReussirTypeDetails.h.inc  ReussirTypes.h  ReussirTypes.td
reussir-mlir/include/Reussir/Interfaces/: CMakeLists.txt  ReussirCompositeLayoutInterface.h  ReussirCompositeLayoutInterface.td  ReussirMangleInterface.h  ReussirMangleInterface.td
reussir-mlir/src/cxx/Analysis/: AliasAnalysis.cpp  CMakeLists.txt  ReuseAnalysis.cpp
reussir-mlir/src/cxx/CAPI/: CAPI.cpp  CMakeLists.txt
reussir-mlir/src/cxx/IR/: CMakeLists.txt  ReussirAttrs.cpp  ReussirDialect.cpp  ReussirOps.cpp  ReussirOpsEnums.cpp  ReussirTypes.cpp
reussir-mlir/src/cxx/Interfaces/: CMakeLists.txt  ReussirCompositeLayoutInterface.cpp  ReussirMangleInterface.cpp
reussir-mlir/src/cxx/Passes/: AcquireReleaseFusion.cpp  CMakeLists.txt  ClosureOutlining.cpp  ConvertReussirToLLVM.cpp  ExpandControlFlow.cpp  GenFreezableVTable.cpp  InferUnionTag.cpp  PrintReuseAnalysis.cpp  TokenReuse.cpp
reussir-mlir/src/mlir/: mod.rs
reussir-mlir/test/integration/: CMakeLists.txt  lit.cfg.py
reussir-mlir/test/integration/basic/: basic_syntax.mlir  closure_syntax.mlir  composite_rc_creation.mlir  invalid_acquire_unfrozen.mlir  invalid_borrow_state.mlir  invalid_borrow_type.mlir  invalid_closure_args_number.mlir  invalid_closure_args_type.mlir  invalid_closure_nonnull_return.mlir  invalid_closure_null_return.mlir  invalid_closure_yield_type.mlir  invalid_decrease_freezable.mlir  invalid_load_state.mlir  invalid_load_type.mlir  invalid_projection_index.mlir  invalid_projection_kind.mlir  invalid_projection_type.mlir  invalid_reference_in_composite.mlir  invalid_release_return.mlir  invalid_release_token.mlir  invalid_release_unfrozen.mlir  invalid_release_without_return.mlir  (+8 more)
reussir-runtime/: CMakeLists.txt  Cargo.toml  build.rs
reussir-runtime/src/: allocator.cpp  allocator.rs  freezable.rs  panicking.rs
runtime/: index.html
tags/: index.html
(+23 files in other folders)
