[package]
name = "reussir-lang"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.5.0"
rug = "1.27.0"
rustc-hash = { version = "2.1.1", features = ["rand"] }
thiserror = "2.0.11"

[dependencies.chumsky]
version = "1.0.0-alpha.8"
features = [
  "pratt", "regex", "memoization"
]

[dependencies.bumpalo]
version = "3.17.0"
features = [
  "collections"
]
