[package]
name = "reussir-lang"
version = "0.1.0"
edition = "2024"

[dependencies]
allocator-api2 = "0.2.21"
archery = "1.2.1"
ariadne = "0.5.0"
gc-arena = { git = "https://github.com/SchrodingerZhu/gc-arena", features = ["hashbrown", "tracing", "allocator-api2"] }
hashbrown = "0.15.2"
logos = "0.15.0"
rpds = "1.1.0"
rug = { version = "1.27.0", features = ["num-traits"] }
rustc-hash = { version = "2.1.1", features = ["rand"] }
smallvec = "2.0.0-alpha.10"
stacker = "0.1.19"
thiserror = "2.0.11"
tracing = "0.1.41"
unescaper = "0.1.5"
ustr = "1.1.0"

[dependencies.chumsky]
version = "1.0.0-alpha.8"
features = [
  "pratt", "regex", "memoization"
]

[dependencies.bumpalo]
version = "3.17.0"
features = [
  "collections"
]

[dev-dependencies]
tracing-subscriber = "0.3.19"
