[package]
name = "reussir-runtime"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
smallvec = "1.14.0"
stacker = "0.1.20"

[features]
default = ["snmalloc"]
snmalloc = ["dep:cmake"]

[build-dependencies]
cmake = { version = "0.1.54", optional = true }
